# bypass-misc

./: CMakeLists.txt  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: CI.yml
archive/dpdk-test/: Cargo.toml  README.md
archive/dpdk-test/src/: lib.rs
cmake/: dpdk_configure.cmake  dpdk_deb.cmake
cmake/pkg/: control  dpdk-net.conf  dpdk-net.sh  postinst  postrm
docs/: Architecture.md  CMakeLists.txt  DPDK_Build.md  Internals.md  Limitations.md  README.md  main.bicep  vm.bicep
docs/Bench/: Bench-2Cpu.md  Benchmark.md
docs/Bench/Azure/: BENCHMARK_d2s.md  BENCHMARK_d4s.md  BENCHMARK_d8s.md  Standard_D2s_v5.md  Standard_D4s_v5.md  Standard_D8s_v5.md
docs/modules/: vm.bicep
dpdk-net/: Cargo.toml
dpdk-net-sys/: build.rs
dpdk-net-sys/include/: wrapper.h
dpdk-net-test/: Bench.md  Cargo.toml
dpdk-net-test/examples/: dpdk_http_server.rs  dpdk_tcp_server.rs
dpdk-net-test/src/: dpdk_test.rs  eth_dev_config.rs  lib.rs  tcp.rs
dpdk-net-test/src/app/: custom_http.rs  dpdk_server_runner.rs  echo_server.rs  http_server.rs  kimojio_server.rs  mod.rs  tokio_server.rs
dpdk-net-test/src/manual/: tcp.rs  tcp_echo.rs
dpdk-net-test/tests/: http2_echo_test.rs  http_auto_echo_test.rs  http_echo_test.rs  smoltcp_dpdk_loop_back_test.rs  smoltcp_dpdk_vdev_test.rs  tcp_echo_async_test.rs  udp_async_test.rs  udp_echo_test.rs  udp_gen.rs  udp_gen2.rs
dpdk-net/src/: lib.rs
dpdk-test/: README.md
dpdk-test/src/: lib.rs
rpkt-test/: Cargo.toml
rpkt-test/examples/: README.md  dpdk_tcp_server.rs
rpkt-test/src/: dpdk_device.rs  lib.rs  tcp.rs  udp.rs
rpkt-test/tests/: smol_tcp.rs  smol_tcp2.rs  smoltcp_dpdk_loop_back_test.rs  smoltcp_dpdk_vdev_test.rs  udp_echo_test.rs  udp_gen.rs  udp_gen2.rs
tests/dpdk-bench-client/: BenchClient.md  Cargo.toml
tests/dpdk-bench-client/src/: hyper_client.rs  main.rs  raw_client.rs  stats.rs
tests/dpdk-bench-server/: BenchServer.md  Cargo.toml
tests/e2e/: README.md  ansible.cfg  generate_benchmark_report.py  inventory.py  run_all_modes.sh  run_tests.sh
tests/infra/: CMakeLists.txt  CheckHW.md  README.md
(+27 files in other folders)
