[package]
name = "dpdk-net-test"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
ctrlc.workspace = true
smoltcp.workspace = true
arrayvec.workspace = true
nix = { workspace = true, features = ["net"] }
dpdk-net.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "net", "signal"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hyper = { workspace = true }
http-body-util.workspace = true
hyper-util.workspace = true

[dev-dependencies]
serial_test.workspace = true