[package]
name = "dpdk-bench-client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP benchmark client similar to wrk for testing DPDK servers"

[[bin]]
name = "dpdk-bench-client"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
hyper.workspace = true
hyper-util = { workspace = true, features = ["client", "client-legacy", "http1", "http2"] }
http-body-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# For HTTP/2 support
h2 = "0.4"
bytes = "1"
http = "1"

# For histograms and stats
hdrhistogram = "7"

# For JSON output
serde = { version = "1", features = ["derive"] }
serde_json = "1"
